<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/DarkPrimary" >

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/border"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_alignEnd="@+id/timeTextView"
        android:layout_alignStart="@+id/timeTextView"
        android:layout_below="@+id/timeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="#FFFFFF" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/clearbutton"
        android:layout_below="@+id/border"
        android:layout_margin="5dp" >

        <Button
            android:id="@+id/timeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />
    </ScrollView>

    <Button
        android:id="@+id/btnPause"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_above="@+id/adview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/round"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_above="@+id/adview"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/btnPause"
        android:background="@drawable/button"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/stop"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_above="@+id/adview"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/btnPause"
        android:background="@drawable/button"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textTimerSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPause"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/dummyTime"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/split2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPause"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/textTimerSec"
        android:text="@string/separator"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textTimerMsec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPause"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/split2"
        android:text="@string/dummyTime"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/split1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textTimerSec"
        android:layout_alignBottom="@+id/textTimerSec"
        android:layout_toStartOf="@+id/textTimerSec"
        android:text="@string/separator"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textTimerMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPause"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/split1"
        android:text="@string/dummyTime"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/clearbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textTimerSec"
        android:layout_margin="5dp"
        android:background="@drawable/button"
        android:text="@string/clear"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/adview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:background="@drawable/button"
        android:text="@string/close"
        android:textColor="#FFFFFF" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/btnClose"
        android:layout_toStartOf="@+id/btnClose"
        android:background="@drawable/button"
        android:contentDescription="@string/contentDescription"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_manage" />

    <ImageButton
        android:id="@+id/btnImpressum"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/btnSettings"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/btnSettings"
        android:background="@drawable/button"
        android:contentDescription="@string/contentDescription"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_dialog_info" />

</RelativeLayout>